--- a/BeardedSpice/Base.lproj/MainMenu.xib
+++ b/BeardedSpice/Base.lproj/MainMenu.xib
@@ -11,7 +11,11 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application">
+            <connections>
+                <outlet property="delegate" destination="PLq-0w-RnA" id="5P9-BT-vuQ"/>
+            </connections>
+        </customObject>
         <menu title="AMainMenu" systemMenu="main" id="29">
             <items>
                 <menuItem title="BeardedSpice" id="56">
@@ -648,6 +652,20 @@
             </items>
         </menu>
         <menu title="StatusMenu" id="SbZ-uf-jkn">
+            <items>
+                <menuItem isSeparatorItem="YES" tag="1" id="A8i-oy-YAJ">
+                    <string key="keyEquivalent" base64-UTF8="YES">
+CQ
+</string>
+                    <modifierMask key="keyEquivalentModifierMask" command="YES"/>
+                </menuItem>
+                <menuItem title="Exit" id="PLq-0w-RnA">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="exitApp:" target="494" id="gbU-LE-9g5"/>
+                    </connections>
+                </menuItem>
+            </items>
             <connections>
                 <outlet property="delegate" destination="494" id="6d1-JA-jog"/>
             </connections>
