Move to MASSPreference

--- a/BeardedSpice/Base.lproj/MainMenu.xib
+++ b/BeardedSpice/Base.lproj/MainMenu.xib
@@ -662,7 +662,7 @@ CQ
                 <menuItem title="Preferences..." id="Qfc-QT-jQd">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="showWindow:" target="yHL-86-VO4" id="HfD-Tb-okN"/>
+                        <action selector="openPreferences:" target="494" id="hiV-pV-che"/>
                     </connections>
                 </menuItem>
                 <menuItem title="Quit BeardedSpice" id="PLq-0w-RnA">
@@ -678,69 +678,9 @@ CQ
         </menu>
         <customObject id="494" customClass="AppDelegate">
             <connections>
-                <outlet property="shortcutView" destination="Hjg-9S-o4W" id="YqW-eB-HmY"/>
                 <outlet property="statusMenu" destination="SbZ-uf-jkn" id="HZF-P6-pFr"/>
             </connections>
         </customObject>
         <customObject id="420" customClass="NSFontManager"/>
-        <customObject id="yHL-86-VO4" customClass="PreferencesWindowController">
-            <connections>
-                <outlet property="window" destination="RbV-uI-qti" id="d9w-F1-kEI"/>
-            </connections>
-        </customObject>
-        <window title="Preferences" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" wantsToBeColor="NO" visibleAtLaunch="NO" animationBehavior="default" id="RbV-uI-qti">
-            <windowStyleMask key="styleMask" titled="YES" closable="YES"/>
-            <rect key="contentRect" x="428" y="284" width="436" height="97"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1280" height="778"/>
-            <view key="contentView" id="4iM-cI-ZBG">
-                <rect key="frame" x="0.0" y="0.0" width="436" height="97"/>
-                <autoresizingMask key="autoresizingMask"/>
-                <subviews>
-                    <customView placeholderIntrinsicWidth="180" placeholderIntrinsicHeight="19" translatesAutoresizingMaskIntoConstraints="NO" id="Hjg-9S-o4W" customClass="MASShortcutView">
-                        <rect key="frame" x="179" y="46" width="180" height="19"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="180" id="EOO-U4-4FZ"/>
-                            <constraint firstAttribute="height" constant="19" id="pLU-ow-pUR"/>
-                        </constraints>
-                    </customView>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0TG-q6-k3D">
-                        <rect key="frame" x="76" y="47" width="97" height="17"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Set Active Tab:" id="SDp-Qw-QGr">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
-                </subviews>
-                <constraints>
-                    <constraint firstItem="Hjg-9S-o4W" firstAttribute="top" secondItem="4iM-cI-ZBG" secondAttribute="top" constant="32" id="G4A-st-NTF"/>
-                    <constraint firstAttribute="trailing" secondItem="Hjg-9S-o4W" secondAttribute="trailing" constant="77" id="LCa-lA-Ryn"/>
-                    <constraint firstItem="Hjg-9S-o4W" firstAttribute="leading" secondItem="0TG-q6-k3D" secondAttribute="trailing" constant="8" symbolic="YES" id="hg9-Fx-0wr"/>
-                    <constraint firstItem="Hjg-9S-o4W" firstAttribute="centerY" secondItem="0TG-q6-k3D" secondAttribute="centerY" id="l9m-KB-RvC"/>
-                </constraints>
-            </view>
-            <toolbar key="toolbar" implicitIdentifier="9F76F24B-566B-4A08-B96D-C4AF7965AED3" autosavesConfiguration="NO" allowsUserCustomization="NO" displayMode="iconAndLabel" sizeMode="regular" id="spY-Bx-quj">
-                <allowedToolbarItems>
-                    <toolbarItem implicitItemIdentifier="52AA5369-E158-4C04-BD75-D17F1A75A3E1" label="General" paletteLabel="General" image="NSPreferencesGeneral" id="viJ-Mf-kOI">
-                        <nil key="toolTip"/>
-                        <size key="minSize" width="32" height="32"/>
-                        <size key="maxSize" width="32" height="32"/>
-                        <imageView key="view" id="Y2f-QP-ZiP">
-                            <rect key="frame" x="8" y="14" width="32" height="32"/>
-                            <autoresizingMask key="autoresizingMask"/>
-                            <imageCell key="cell" refusesFirstResponder="YES" alignment="left" animates="YES" imageScaling="proportionallyDown" image="NSPreferencesGeneral" id="WZo-HW-Pt0"/>
-                        </imageView>
-                    </toolbarItem>
-                </allowedToolbarItems>
-                <defaultToolbarItems>
-                    <toolbarItem reference="viJ-Mf-kOI"/>
-                </defaultToolbarItems>
-            </toolbar>
-        </window>
     </objects>
-    <resources>
-        <image name="NSPreferencesGeneral" width="32" height="32"/>
-    </resources>
 </document>
