--- a/BeardedSpice/en.lproj/MainMenu.xib
+++ b/BeardedSpice/en.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1514" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -29,6 +29,12 @@
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="236">
                                 <modifierMask key="keyEquivalentModifierMask" command="YES"/>
+                            </menuItem>
+                            <menuItem title="Check for Updates..." id="6PD-2J-2va">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="checkForUpdates:" target="494" id="cDA-f3-vX6"/>
+                                </connections>
                             </menuItem>
                             <menuItem title="Preferences…" keyEquivalent="," id="129">
                                 <connections>
@@ -111,12 +117,19 @@ CQ
 </string>
                     <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                 </menuItem>
+                <menuItem title="Check for Updates..." id="dBr-6c-abQ">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="checkForUpdates:" target="494" id="KEN-qo-VCz"/>
+                    </connections>
+                </menuItem>
                 <menuItem title="Preferences..." id="Qfc-QT-jQd">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="openPreferences:" target="494" id="hiV-pV-che"/>
                     </connections>
                 </menuItem>
+                <menuItem isSeparatorItem="YES" id="dsV-RJ-Ufq"/>
                 <menuItem title="Quit BeardedSpice" id="PLq-0w-RnA">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
@@ -127,12 +140,12 @@ CQ
             <connections>
                 <outlet property="delegate" destination="494" id="6d1-JA-jog"/>
             </connections>
+            <point key="canvasLocation" x="317" y="643.5"/>
         </menu>
         <customObject id="494" customClass="AppDelegate">
             <connections>
                 <outlet property="statusMenu" destination="SbZ-uf-jkn" id="HZF-P6-pFr"/>
             </connections>
         </customObject>
-        <customObject id="420" customClass="NSFontManager"/>
     </objects>
 </document>
